[gd_scene load_steps=3 format=3 uid="uid://deqhdpkbqnvja"]

[ext_resource type="PackedScene" uid="uid://c2galfnni2hkt" path="res://gui/drawers/entries/ElementEntry.tscn" id="1_mw8g2"]
[ext_resource type="Script" path="res://gui/drawers/entries/CompositeElementEntry.gd" id="1_r32m7"]

[node name="CompositeElementEntry" type="VBoxContainer"]
theme_type_variation = &"CompositeElementEntry"
script = ExtResource("1_r32m7")

[node name="ElementEntry" parent="." instance=ExtResource("1_mw8g2")]
unique_name_in_owner = true
layout_mode = 2

[node name="Layout" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="IndentSpacer" type="Control" parent="Layout"]
unique_name_in_owner = true
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
mouse_filter = 2

[node name="ElementList" type="VBoxContainer" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
